samples/_failures_safe/1761310390_77f7ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_28ec7869.c: In function ‘main’:
./samples/SAFE/__tmp_28ec7869.c:146:25: error: expected ‘;’ at end of input
  146 |     for (size_t i = 0; i
      |                         ^
      |                         ;
./samples/SAFE/__tmp_28ec7869.c:146:5: error: expected declaration or statement at end of input
  146 |     for (size_t i = 0; i
      |     ^~~
